--- a/JavaScript/JavaScript 101/index.html
+++ b/JavaScript/JavaScript 101/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <h3>JavaScript 101</h3>
-    <script type="text/javascript" src="Working with String Functions - Part 1.js"></script>
+    <script type="text/javascript" src="Order of Operations in JavaScript.js"></script>
 </body>
 
 </html>
