--- a/JavaScript/JavaScript Functions/index.html
+++ b/JavaScript/JavaScript Functions/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <h3>JavaScript 101</h3>
-    <script type="text/javascript" src="Overview of JavaScript Ternary Operator.js"></script>
+    <script type="text/javascript" src=".js"></script>
 </body>
 
 </html>
