--- a/JavaScript/Automating Tasks in the Browser with JavaScript/index.html
+++ b/JavaScript/Automating Tasks in the Browser with JavaScript/index.html
@@ -10,15 +10,9 @@
 </head>
 
 <body>
-    <h3>JavaScript Conditionals</h3>
+    <h3>Task Automation</h3>
     
-    <script type="text/javascript" src="How to Use the 'this' Keyword in JavaScript Programs.js"></script>
-    <script type="text/javascript" src=""></script>
-    <script type="text/javascript" src=""></script>
-    <script type="text/javascript" src=""></script>
-    <script type="text/javascript" src=""></script>
-    <script type="text/javascript" src=""></script>
-    <script type="text/javascript" src=""></script>
+    <script type="text/javascript" src="How to Pull Images from Instagram with JavaScript.js"></script>
     <script type="text/javascript" src=""></script>
     <script type="text/javascript" src=""></script>
     <script type="text/javascript" src=""></script>
