--- a/JavaScript/JavaScript Arrays/index.html
+++ b/JavaScript/JavaScript Arrays/index.html
@@ -10,11 +10,11 @@
 </head>
 
 <body>
-    <h3>JavaScript Conditionals</h3>
+    <h3>JavaScript Arrays</h3>
     
-    <script type="text/javascript" src="How to Use the 'this' Keyword in JavaScript Programs.js"></script>
-    <script type="text/javascript" src=""></script>
-    <script type="text/javascript" src=""></script>
+    <script type="text/javascript" src="How to Create Arrays in JavaScript.js"></script>
+    <script type="text/javascript" src="Guide to Adding and Removing Array Elements in JavaScript.js"></script>
+    <script type="text/javascript" src="How to Use the Splice Function in JavaScript to Remove Specific Array Elements.js"></script>
     <script type="text/javascript" src=""></script>
     <script type="text/javascript" src=""></script>
     <script type="text/javascript" src=""></script>
