--- a/JavaScript/JavaScript Loops/index.html
+++ b/JavaScript/JavaScript Loops/index.html
@@ -10,14 +10,11 @@
 </head>
 
 <body>
-    <h3>JavaScript Conditionals</h3>
+    <h3>JavaScript Loops</h3>
     
-    <script type="text/javascript" src="How to Use the 'this' Keyword in JavaScript Programs.js"></script>
-    <script type="text/javascript" src=""></script>
-    <script type="text/javascript" src=""></script>
-    <script type="text/javascript" src=""></script>
-    <script type="text/javascript" src=""></script>
-    <script type="text/javascript" src=""></script>
+    <script type="text/javascript" src="Guide to For Loops in JavaScript.js"></script>
+    <script type="text/javascript" src="How to Loop Through a JavaScript Object.js"></script>
+    <script type="text/javascript" src="Guide to While and Do - While Loops in JavaScript.js"></script>
     <script type="text/javascript" src=""></script>
     <script type="text/javascript" src=""></script>
     <script type="text/javascript" src=""></script>
