--- a/JavaScript/Modern JavaScript Basics/index.html
+++ b/JavaScript/Modern JavaScript Basics/index.html
@@ -10,17 +10,10 @@
 </head>
 
 <body>
-    <h3>JavaScript Conditionals</h3>
+    <h3>Modern JavaScript Basics</h3>
     
-    <script type="text/javascript" src="How to Use the 'this' Keyword in JavaScript Programs.js"></script>
-    <script type="text/javascript" src=""></script>
-    <script type="text/javascript" src=""></script>
-    <script type="text/javascript" src=""></script>
-    <script type="text/javascript" src=""></script>
-    <script type="text/javascript" src=""></script>
-    <script type="text/javascript" src=""></script>
-    <script type="text/javascript" src=""></script>
-    <script type="text/javascript" src=""></script>
+    <script type="text/javascript" src="Using the Const Variable Type in JavaScript.js"></script>
+    <script type="text/javascript" src="Guide to Backtick string interpolation in Javascript.js"></script>
     <script type="text/javascript" src=""></script>
     <script type="text/javascript" src=""></script>
     <script type="text/javascript" src=""></script>
