--- a/JavaScript/Modern JavaScript Basics/index.html
+++ b/JavaScript/Modern JavaScript Basics/index.html
@@ -12,9 +12,8 @@
 <body>
     <h3>Modern JavaScript Basics</h3>
     
-    <script type="text/javascript" src="Using the Const Variable Type in JavaScript.js"></script>
-    <script type="text/javascript" src="Guide to Backtick string interpolation in Javascript.js"></script>
-    <script type="text/javascript" src=""></script>
+    
+    <script type="text/javascript" src="How to Get the Average from an Array in JavaScript.js"></script>
     <script type="text/javascript" src=""></script>
     <script type="text/javascript" src=""></script>
     <script type="text/javascript" src=""></script>
