--- a/JavaScript/Modern JavaScript Basics/index.html
+++ b/JavaScript/Modern JavaScript Basics/index.html
@@ -10,10 +10,10 @@
 </head>
 
 <body>
-    <h3>Modern JavaScript Basics</h3>
+    <h1>Modern JavaScript Basics</h1>
     
     
-    <script type="text/javascript" src="How to Get the Average from an Array in JavaScript.js"></script>
+    <script type="text/javascript" src="How to Check if Two Objects Have Equal Values.js"></script>
     <script type="text/javascript" src=""></script>
     <script type="text/javascript" src=""></script>
     <script type="text/javascript" src=""></script>
