--- a/JavaScript/Advanced JavaScript/index.html
+++ b/JavaScript/Advanced JavaScript/index.html
@@ -10,10 +10,10 @@
 </head>
 
 <body>
-    <h1>Async and Await in JavaScript</h1>
+    <h1>Advanced JavaScript</h1>
     
     
-    <script type="text/javascript" src="Implementing Error Handling In a JavaScript Async - Await Function.js"></script>
+    <script type="text/javascript" src="Build an HTML Heading Generator Function in JavaScript.js"></script>
 </body>
 
 </html>
